增加了手机验证

--- a/samplenews/src/main/res/layout/like_fragment.xml
+++ b/samplenews/src/main/res/layout/like_fragment.xml
@@ -1,40 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    >
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="已关注"
-        android:textSize="18sp"
-        android:textColor="#eee"
-        android:gravity="center_horizontal"
-        />
-    <com.nemo.samplenews.view.MyViewGroup
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#fff"
-        >
+    android:background="#fff"
+    android:orientation="vertical">
 
-    </com.nemo.samplenews.view.MyViewGroup>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="未关注"
-        android:textSize="18sp"
-        android:layout_marginTop="10dp"
-        android:textColor="#eee"
-        android:gravity="center_horizontal"
-        />
-    <com.nemo.samplenews.view.MyViewGroup
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="#fff"
-        >
-    </com.nemo.samplenews.view.MyViewGroup>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:paddingTop="5dp"
+                android:text="已关注"
+                android:textColor="#000"
+                android:textSize="22sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#eee"
+                android:orientation="horizontal" />
+
+            <GridView
+                android:id="@+id/like_grid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:horizontalSpacing="20dp"
+                android:numColumns="3"
+                android:verticalSpacing="10dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:paddingTop="5dp"
+                android:text="未关注"
+                android:textColor="#000"
+                android:textSize="22sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#eee"
+                android:orientation="horizontal" />
+
+            <GridView
+                android:id="@+id/nolike_grid"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:horizontalSpacing="20dp"
+                android:numColumns="3"
+                android:verticalSpacing="10dp" />
+
 </LinearLayout>
