--- a/joke/src/main/res/layout/fragment_main.xml
+++ b/joke/src/main/res/layout/fragment_main.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.nemo.samplenews.view.XListView
+    <com.nemo.joke.view.XListView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="#fff"
         android:dividerHeight="0.5dp"
         >
-    </com.nemo.samplenews.view.XListView>
+    </com.nemo.joke.view.XListView>
 </LinearLayout>
