--- a/joke/src/main/res/layout/my_fragment.xml
+++ b/joke/src/main/res/layout/my_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="#fff"
     >
-    <com.nemo.samplenews.view.CircleImageView
+    <com.nemo.joke.view.CircleImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:src="@drawable/img"
